Removed the clamp() function for the height property on the .modal-pop-up since there was issues with there being too much white space on larger resolutions or too little space on smaller resolutions which led to the download button bleeding outside of the container. Replaced the clamp() function with an 'h-fit' utility class.

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,6 @@ h2, .personal-overview-container, .featured-projects-container, .featured-experi
 
 .modal-pop-up {
     width: clamp(20rem, 50vw, 35rem);
-    height: clamp(20rem, 200vw, 40rem);
 }
 
 .modal-pop-up::backdrop {
